fixing website overflows in mobile

--- a/dev-data/scss/_about-section.scss
+++ b/dev-data/scss/_about-section.scss
@@ -1,4 +1,5 @@
 section#about-me {
+  overflow-x: hidden;
   .content {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
